--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -24,8 +24,11 @@ $yellow: #ffc107 !default;
 $green: #28a745 !default;
 $teal: #20c997 !default;
 $cyan: #17a2b8 !default;
+$brightblue: #55C1E8 !default;
+$darkblue: #31313B !default;
+$crimson: #CE112D !default; 
 
-$primary: $blue !default;
+$primary: $crimson !default;
 $secondary: $gray-600 !default;
 $success: $green !default;
 $info: $cyan !default;
