--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -106,6 +106,13 @@ header.masthead .logo {
 .chivote-coll .collective-logos .collective-logo {
   height: 5rem;
   margin-bottom: 1rem;
+  opacity: 0.75;
+  -webkit-transition: opacity 0.3s;
+  transition: opacity 0.3s;
+}
+
+.chivote-coll .collective-logos .collective-logo:hover {
+  opacity: 1;
 }
 
 @media (min-width: 768px) {
@@ -187,4 +194,22 @@ footer.footer {
 
 .btn-primary {
   background-color: #CE112D;
+}
+
+.intro-blurb {
+  font-weight: normal;
+  letter-spacing: 0.5px;
+}
+
+@media screen and (max-width: 768px) {
+  h3.intro-blurb {
+    margin-bottom: 1rem !important;
+  }
+  h4.intro-blurb {
+    font-size: 1em;
+  }
+}
+
+#mc_embed_signup p {
+  font-weight: normal;
 }
