--- a/scss/_icons.scss
+++ b/scss/_icons.scss
@@ -1,36 +1,42 @@
 .chivote-coll {
-  background-color: $darkblue;
-  color: $white;
-  padding: 4rem;
-  .collective-logos {
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    .collective-logo {
-      height: 5rem;
-      margin-bottom: 1rem;
-    }
-    @media (min-width: 768px) {
-      flex-direction: row;
-      .collective-logo {
-        margin-bottom: 0;
-      }
-    }
-  }
-  .chivote-coll-item {
-    max-width: 20rem;
-    .chivote-coll-icon {
-      height: 7rem;
-      i {
-        font-size: 4.5rem;
-      }
-    }
-    &:hover {
-      .chivote-coll-icon {
-        i {
-          font-size: 5rem;
-        }
-      }
-    }
-  }
+	background-color: $darkblue;
+	color: $white;
+	padding: 4rem;
+	.collective-logos {
+		flex-direction: column;
+		align-items: center;
+		justify-content: space-between;
+		.collective-logo {
+			height: 5rem;
+			margin-bottom: 1rem;
+			opacity: 0.75;
+			transition: opacity 0.3s;
+
+			&:hover {
+				opacity: 1;
+			}
+		}
+		@media (min-width: 768px) {
+			flex-direction: row;
+			.collective-logo {
+				margin-bottom: 0;
+			}
+		}
+	}
+	.chivote-coll-item {
+		max-width: 20rem;
+		.chivote-coll-icon {
+			height: 7rem;
+			i {
+				font-size: 4.5rem;
+			}
+		}
+		&:hover {
+			.chivote-coll-icon {
+				i {
+					font-size: 5rem;
+				}
+			}
+		}
+	}
 }
