--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -98,9 +98,9 @@ header.masthead .logo {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
 }
 
 .chivote-coll .collective-logos .collective-logo {
@@ -124,6 +124,7 @@ header.masthead .logo {
   }
   .chivote-coll .collective-logos .collective-logo {
     margin-bottom: 0;
+    padding: 0.5rem 1rem;
   }
 }
 
@@ -189,6 +190,8 @@ footer.footer {
 
 .logo--chivote-coll {
   height: 50px;
+  -o-object-fit: contain;
+  object-fit: contain;
   margin-bottom: 2rem;
 }
 
