--- a/scss/_icons.scss
+++ b/scss/_icons.scss
@@ -5,13 +5,12 @@
 	.collective-logos {
 		flex-direction: column;
 		align-items: center;
-		justify-content: space-between;
+    justify-content: center;
 		.collective-logo {
 			height: 5rem;
-			margin-bottom: 1rem;
+      margin-bottom: 1rem;
 			opacity: 0.75;
 			transition: opacity 0.3s;
-
 			&:hover {
 				opacity: 1;
 			}
@@ -19,7 +18,8 @@
 		@media (min-width: 768px) {
 			flex-direction: row;
 			.collective-logo {
-				margin-bottom: 0;
+        margin-bottom: 0;
+        padding: 0.5rem 1rem;
 			}
 		}
 	}
