--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -25,6 +25,12 @@ header.masthead {
   @media (min-width: 768px) {
     padding-top: 8rem;
     padding-bottom: 8rem;
+
+    .logo {
+      margin-top: 1rem;
+      margin-bottom: 2rem;
+    }
+
     h1 {
       font-size: 3rem;
     }
