--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -230,6 +230,7 @@ footer.footer {
 }
 
 .features-icons .features-icons-item .features-icons-icon i {
+  color: #CE112D !important;
   font-size: 4.5rem;
 }
 
