--- a/scss/landing-page.scss
+++ b/scss/landing-page.scss
@@ -56,7 +56,7 @@
 }
 
 .features-icons .features-icons-item .features-icons-icon i {
-  color: $crimson !important;
+  color: #db3a32 !important;
   font-size: 4.5rem;
 }
 
@@ -65,7 +65,7 @@
 }
 
 .features-icons {
-  padding: 4rem;
+  margin-top: 2rem;
 }
 
 .feature-link,
