--- a/scss/landing-page.scss
+++ b/scss/landing-page.scss
@@ -89,8 +89,15 @@
 
 .page-faq {
   @media screen and (max-width: 768px) {
+    p,
+    li {
+      font-size: 0.9rem;
+    }
     h1 {
-      font-size: 2rem;
+      font-size: 1.6rem;
+    }
+    h3 {
+      font-size: 1.2rem;
     }
   }
   h3 {
